<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorBasic"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".pageLean">

    <TextView
        android:id="@+id/txtPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/price"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.593"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.545" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="368dp"
        android:layout_height="429dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/r1"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/chPork"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="casual"
                android:text="@string/L_Pork"
                android:textAlignment="textStart"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/PorkPrice"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/L_PorkP"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/PorkQ"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:fontFamily="casual"
                android:hint="@string/Lb"
                android:inputType="number"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/r2"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/chBeaf"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="casual"
                android:text="@string/L_Beaf"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/BeafPrice"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/L_BeafP"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/BeafQ"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:fontFamily="casual"
                android:hint="@string/Lb"
                android:inputType="number"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/r3"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/chChicken"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="casual"
                android:text="@string/L_Chicken"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/ChickenPrice"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/L_ChickenP"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/ChickenQ"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:fontFamily="casual"
                android:hint="@string/Lb"
                android:inputType="number"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/r4"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/chFish"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="casual"
                android:text="@string/L_Fish"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/FishPrice"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/L_FishP"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/FishQ"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:fontFamily="casual"
                android:hint="@string/Lb"
                android:inputType="number"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/r5"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/chEgg"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="casual"
                android:text="@string/L_Egg"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/EggPrice"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/L_EggP"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/EggQ"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:fontFamily="casual"
                android:hint=""
                android:inputType="number"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/AddToCart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@color/colorGold"
        android:fontFamily="casual"
        android:onClick="addToBasket"
        android:text="@string/Add_to_Cart"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/cartButton"
        android:layout_width="53dp"
        android:layout_height="51dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@color/colorBasic"
        android:onClick="showCart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/AddToCart"
        app:srcCompat="@mipmap/icons8shoppingcart80" />
</android.support.constraint.ConstraintLayout>