<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorBasic"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".pageGrain">

    <TextView
        android:id="@+id/txtPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/price"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.593"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.545" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="368dp"
        android:layout_height="429dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/r1"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/chOatmeal"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="casual"
                android:text="@string/G_Oatmeal"
                android:textAlignment="textStart"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/OatmealPrice"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/G_OatmealP"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/OatmealQ"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:fontFamily="casual"
                android:hint="@string/pc"
                android:inputType="number"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/r2"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/chCrunch"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="casual"
                android:text="@string/G_Crunch"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/CrunchPrice"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/G_CrunchP"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/CrunchQ"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:fontFamily="casual"
                android:hint="@string/pc"
                android:inputType="number"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/r3"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/chCheerios"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="casual"
                android:text="@string/G_Cheerios"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/CheeriosPrice"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/G_CheeriosP"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/CheeriosQ"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:fontFamily="casual"
                android:hint="@string/pc"
                android:inputType="number"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/r4"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/chFlakes"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="casual"
                android:text="@string/G_Flakes"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/FlakesPrice"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/G_FlakesP"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/FlakesQ"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:fontFamily="casual"
                android:hint="@string/pc"
                android:inputType="number"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/r5"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/chOats"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="casual"
                android:text="@string/G_Oats"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/OatsPrice"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/G_OatsP"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/OatsQ"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:fontFamily="casual"
                android:hint="@string/pc"
                android:inputType="number"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/AddToCart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@color/colorGold"
        android:fontFamily="casual"
        android:onClick="addToBasket"
        android:text="@string/Add_to_Cart"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/cartButton"
        android:layout_width="53dp"
        android:layout_height="51dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@color/colorBasic"
        android:onClick="showCart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/AddToCart"
        app:srcCompat="@mipmap/icons8shoppingcart80" />

</android.support.constraint.ConstraintLayout>